docs: optimize docs of quick start

--- a/src/content/docs/en-us/guides/facade/index.mdx
+++ b/src/content/docs/en-us/guides/facade/index.mdx
@@ -4,7 +4,11 @@ sidebar:
   order: 1
 ---
 
-If you prefer to use a ready-to-use spreadsheet and don't want to deal with the underlying API of Univer, or if you are more inclined towards the usage style of Luckysheet, you can utilize the Panel API provided by `@univerjs/facade`. In fact, Uniscript also uses the same API provided by `@univerjs/facade`, so the capabilities provided by `@univerjs/facade` align with what Uniscript offers.
+If you prefer to use a ready-to-use spreadsheet and don't want to deal with the underlying API of Univer, or if you are more inclined towards the usage style of Luckysheet, you can utilize the Panel API provided by `@univerjs/facade`. 
+
+:::note
+In fact, Uniscript also uses the same API provided by `@univerjs/facade`, so the capabilities provided by `@univerjs/facade` align with what Uniscript offers.
+:::
 
 In this section, we will introduce the installation and basic usage of Facade.
 
@@ -54,4 +58,4 @@ univerAPI.createUniverSheet({
 });
 ```
 
-You can refer to the [Facade API documentation](/api/facade/) for a more detailed description of what you can achieve with Facade.
+You can refer to the [Facade API documentation](/api/facade/) for a more detailed description of what you can achieve with Facade. In the following sections, we will demonstrate some common usage scenarios.
