--- a/src/content/docs/en-us/guides/quick-start/index.mdx
+++ b/src/content/docs/en-us/guides/quick-start/index.mdx
@@ -4,7 +4,7 @@ sidebar:
   order: 1
 ---
 
-We recommend using build tools such as [Vite](https://vitejs.dev/), [esbuild](https://esbuild.github.io/), or [Webpack 5](https://webpack.js.org/) that have good support for ES Modules to build Univer applications. If you are using other build tools like Webpack 4, you may require some additional configurations. For more information, please refer to the [FAQ](/en-us/guides/faq).
+We recommend using build tools such as [Vite](https://vitejs.dev/), [esbuild](https://esbuild.github.io/), or [Webpack 5](https://webpack.js.org/) that have good support for ES Modules to build Univer applications. If you are using other build tools like Webpack 4, you may require some additional configurations. For more information, please refer to [Read More](/en-us/guides/quick-start#read-more) and the [FAQ](/en-us/guides/faq).
 
 ## Installation
 
@@ -57,16 +57,14 @@ import { UniverUIPlugin } from "@univerjs/ui";
 
 Next, instantiate an Univer object and register these plugins:
 
-```ts title="main.ts"
+```ts title="main.ts" {9}
 const univer = new Univer({
   theme: defaultTheme,
 });
 
 // core plugins
 univer.registerPlugin(UniverRenderEnginePlugin);
-univer.registerPlugin(UniverFormulaEnginePlugin, {
-  notExecuteFormula: true,
-});
+univer.registerPlugin(UniverFormulaEnginePlugin);
 univer.registerPlugin(UniverUIPlugin, {
   container: "app",
   header: true,
@@ -80,15 +78,30 @@ univer.registerPlugin(UniverDocsPlugin, {
 });
 
 // sheet plugins
-univer.registerPlugin(UniverSheetsPlugin, {
-  notExecuteFormula: true,
-});
+univer.registerPlugin(UniverSheetsPlugin);
 univer.registerPlugin(UniverSheetsUIPlugin);
 univer.registerPlugin(UniverSheetsFormulaPlugin);
 ```
 
-Finally, create an Univer Sheet using the `createUniverSheet` method:
+Please be informed that when registering the `UniverUIPlugin`, it is necessary to provide a `container` parameter. This parameter represents a CSS selector that serves the purpose of specifying the container element for Univer.
+
+:::note
+You have the flexibility to create multiple instances of Univer by creating multiple `Univer` objects and supplying different containers when registering the `UniverUIPlugin`. This allows you to incorporate multiple instances of Univer within a single webpage! For further guidance, kindly refer to our [playground](/playground/?title=Multi%20Instance).
+:::
+
+Finally, create an empty Workbook using the `createUniverSheet` method:
 
 ```ts title="main.ts"
 univer.createUniverSheet({});
 ```
+
+For instructions on how to load a spreadsheet into a newly created Univer instance, please consult the [next section](/en-us/guides/quick-start/data) of our documentation.
+
+## Read More
+
+We have provided some examples to assist you in incorporating Univer using various scaffolding tools:
+
+- [Vite](/playground/?title=Vite)
+- [Webpack 4](/playground/?title=Webpack%204)
+
+Alternatively, you can also include Univer using the `<script>` tag. Please refer to the [Using UMD](/guides/quick-start/umd/) guide for further instructions.
