--- a/src/content/docs/guides/facade/index.mdx
+++ b/src/content/docs/guides/facade/index.mdx
@@ -4,9 +4,13 @@ sidebar:
   order: 1
 ---
 
-如果你只想使用一个开箱即用的电子表格，不想使用 Univer 的底层 API，或者你更偏向于 Luckysheet 的使用方式，你可以使用 @univerjs/facade 提供的面板（**Facade**） API。实际上，[Uniscript](/guides/plugins/common/uniscript/) 也使用了 @univerjs/facade 提供的这套 API，因此 @univerjs/facade 提供的能力就是 Uniscript 能够提供的能力。
+如果你只想使用一个开箱即用的电子表格，不想使用 Univer 的底层 API，或者你更偏向于 Luckysheet 的使用方式，你可以使用 @univerjs/facade 提供的面板（**Facade**） API。
 
 本小节介绍 Facade 的安装和基本使用方法。
+
+:::note
+实际上，[Uniscript](/guides/plugins/common/uniscript/) 也使用了 @univerjs/facade 提供的这套 API，因此 @univerjs/facade 提供的能力就是 Uniscript 能够提供的能力。
+:::
 
 :::note[⚗️ 施工中]
 我们仍在扩展 Facade 的能力，部分底层 API 支持的能力可能还没有被 Facade 支持，如果你发现了这样的问题，请向我们[提交 issue](/guides/contributing#github-issues) 或者[提交 Pull Request](http://localhost:4321/guides/contributing#contributing-code)。
@@ -54,4 +58,4 @@ univerAPI.createUniverSheet({
 });
 ```
 
-你可以查看 [Facade API](/api/facade/) 来进一步了解能用 Facade 做什么。
+你可以查看 [Facade API](/api/facade/) 来查看 Facade 的全部能力。接下来几个小节会演示一些常见的使用场景。
