--- a/src/content/docs/guides/quick-start/index.mdx
+++ b/src/content/docs/guides/quick-start/index.mdx
@@ -4,7 +4,7 @@ sidebar:
   order: 1
 ---
 
-我们推荐使用 [Vite](https://vitejs.dev/)、[esbuild](https://esbuild.github.io/) 或 [Webpack 5](https://webpack.js.org/) 等对 ES Module 支持较好的构建工具来构建 Univer 应用。如果你使用了其它构建工具（例如 Webpack 4），可能会需要一些额外的配置。请阅读 [FAQ](/guides/faq) 获取更多信息。
+我们推荐使用 [Vite](https://vitejs.dev/)、[esbuild](https://esbuild.github.io/) 或 [Webpack 5](https://webpack.js.org/) 等对 ES Module 支持较好的构建工具来构建 Univer 应用。如果你使用了其它构建工具（例如 Webpack 4），可能会需要一些额外的配置，请阅读 [更多](/guides/quick-start/#更多) 以及 [FAQ](/guides/faq) 获取更多信息。
 
 ## 安装
 
@@ -22,8 +22,8 @@ import { Tabs, TabItem } from "@astrojs/starlight/components";
   </TabItem>
 
   <TabItem label="yarn">
-    ```shell
-    yarn add install @univerjs/core @univerjs/design @univerjs/docs @univerjs/engine-formula @univerjs/engine-render @univerjs/sheets @univerjs/sheets-formula @univerjs/sheets-ui @univerjs/ui
+    ```shell 
+    yarn add install @univerjs/core @univerjs/design @univerjs/docs @univerjs/engine-formula @univerjs/engine-render  @univerjs/sheets @univerjs/sheets-formula @univerjs/sheets-ui @univerjs/ui 
     ```
   </TabItem>
 
@@ -57,16 +57,14 @@ import { UniverUIPlugin } from "@univerjs/ui";
 
 然后创建一个 Univer 实例，并注册这些插件：
 
-```ts title="main.ts"
+```ts title="main.ts" {9}
 const univer = new Univer({
   theme: defaultTheme,
 });
 
 // core plugins
 univer.registerPlugin(UniverRenderEnginePlugin);
-univer.registerPlugin(UniverFormulaEnginePlugin, {
-  notExecuteFormula: true,
-});
+univer.registerPlugin(UniverFormulaEnginePlugin);
 univer.registerPlugin(UniverUIPlugin, {
   container: "app",
   header: true,
@@ -80,15 +78,30 @@ univer.registerPlugin(UniverDocsPlugin, {
 });
 
 // sheet plugins
-univer.registerPlugin(UniverSheetsPlugin, {
-  notExecuteFormula: true,
-});
+univer.registerPlugin(UniverSheetsPlugin);
 univer.registerPlugin(UniverSheetsUIPlugin);
 univer.registerPlugin(UniverSheetsFormulaPlugin);
 ```
 
-最后通过 `createUniverSheet` 方法创建一个 Univer Sheet：
+注意，在注册 `UniverUIPlugin` 的时候，你需要传递一个 `container` 参数，这个参数是一个 CSS 选择器，用于指定 Univer 的容器元素。
+
+:::note
+你可以通过创建多个 Univer 对象，并在注册 `UniverUIPlugin` 时提供不同的容器，从而在一个页面上创建多个 Univer！请参考我们的 [playground](/playground/?title=Multi%20Instance)。
+:::
+
+最后通过 `createUniverSheet` 方法创建一个空白的 Univer Sheet：
 
 ```ts title="main.ts"
 univer.createUniverSheet({});
 ```
+
+关于如何在新创建的 Univer 加载电子表格，请参考[下一节](/guides/quick-start/data)。
+
+## 更多
+
+我们提供了一些示例帮助你在不同的脚手架工具中引入 Univer：
+
+- [Vite](/playground/?title=Vite)
+- [Webpack 4](/playground/?title=Webpack%204)
+
+你可以通过 `<script>` 标签的方式引入 Univer，请参考 [使用 UMD](/guides/quick-start/umd/)。
