--- a/src/content/blog/ot/zh-cn.mdx
+++ b/src/content/blog/ot/zh-cn.mdx
@@ -366,7 +366,7 @@ C 对于 `a` 的处理和 B 类似，不再赘述。
 
 在整个协同编辑的过程中会大量使用网络，不可避免地会出现各种网络中断的情况（可能是网络本身出了问题，又或者在网络传输完成之前网页被用户关闭），协同调度算法必须对这些意外做出应对。
 
-1. 客户端可能错过服务端广播的一些操作，造成本地版本号的落后。客户端如何感知这种情况？客户端有两种办法感知，第一种是在接收服务端的远程操作时，发现操作的 `revision` 比本地的版本号 1 要大；第二种是在发送操作给服务端时，服务端返回的 ACK 事件的 `revision` 比本地的版本号要大。这两种情况都说明了客户端错过了一些操作，此时客户端需要向服务端拉取这些操作，拉取操作的区间应该是本地版本号加一到 `revision` 减一（闭区间），这个拉取的行为叫做 fetch miss。在 fetch miss 期间，本地仍有可能发生操作，也有可能接收到更新的服务端操作，这些操作之间均需要进行操作转换。
+1. 客户端可能错过服务端广播的一些操作，造成本地版本号的落后。客户端如何感知这种情况？客户端有两种办法感知，第一种是在接收服务端的远程操作时，发现操作的 `revision` 比本地的版本号 + 1 要大；第二种是在发送操作给服务端时，服务端返回的 ACK 事件的 `revision` 比本地的版本号要大。这两种情况都说明了客户端错过了一些操作，此时客户端需要向服务端拉取这些操作，拉取操作的区间应该是本地版本号加一到 `revision` 减一（闭区间），这个拉取的行为叫做 fetch miss。在 fetch miss 期间，本地仍有可能发生操作，也有可能接收到更新的服务端操作，这些操作之间均需要进行操作转换。
 2. 客户端提交的操作的丢失了，客户端需要设置超时机制以在这种情形发生时重新发送操作。我们在此处回收上面的一处伏笔：注意此时发送的操作的 `baseRevision` 可能已经被修改过，这可以降低服务器需要进行的 transform 的次数。
 3. 客户端可能错过服务端的 ACK。为了避免同一个操作重复发送和执行，我们需要给每个操作一个全局唯一的 ID，当服务端收到操作时，先校验这个操作是否已经被执行过，如果已经执行过，那么就不再执行，直接返回 ACK。而客户端如果在一段时间内没有收到 ACK，那么就需要重新发送这个操作。
 4. 客户端有操作未同步到服务端时网络链接断开了。此时必须将用户的编辑操作在本地进行缓存，并在链接网络后重新发送，即需要支持离线缓存。
