--- a/src/content/docs/en-us/guides/quick-start/index.mdx
+++ b/src/content/docs/en-us/guides/quick-start/index.mdx
@@ -16,14 +16,10 @@ import { Tabs, TabItem } from "@astrojs/starlight/components";
 
 <Tabs>
   <TabItem label="npm">
+    We recommend using npm >= 8.0.0 to automatically install peerDependencies.
+
     ```shell
     npm install @univerjs/core @univerjs/design @univerjs/docs @univerjs/engine-formula @univerjs/engine-render @univerjs/sheets @univerjs/sheets-formula @univerjs/sheets-ui @univerjs/ui
-    ```
-  </TabItem>
-
-  <TabItem label="yarn">
-    ```shell
-    yarn add install @univerjs/core @univerjs/design @univerjs/docs @univerjs/engine-formula @univerjs/engine-render @univerjs/sheets @univerjs/sheets-formula @univerjs/sheets-ui @univerjs/ui
     ```
   </TabItem>
 
