--- a/src/content/docs/guides/quick-start/index.mdx
+++ b/src/content/docs/guides/quick-start/index.mdx
@@ -16,14 +16,10 @@ import { Tabs, TabItem } from "@astrojs/starlight/components";
 
 <Tabs>
   <TabItem label="npm">
+    推荐使用 npm >= 8.0.0，以便自动安装 peerDependencies。
+
     ```shell
     npm install @univerjs/core @univerjs/design @univerjs/docs @univerjs/engine-formula @univerjs/engine-render @univerjs/sheets @univerjs/sheets-formula @univerjs/sheets-ui @univerjs/ui
-    ```
-  </TabItem>
-
-  <TabItem label="yarn">
-    ```shell 
-    yarn add install @univerjs/core @univerjs/design @univerjs/docs @univerjs/engine-formula @univerjs/engine-render  @univerjs/sheets @univerjs/sheets-formula @univerjs/sheets-ui @univerjs/ui 
     ```
   </TabItem>
 
