docs(plugins): add deps info

--- a/src/content/docs/guides/plugins/common/uniscript.mdx
+++ b/src/content/docs/guides/plugins/common/uniscript.mdx
@@ -49,3 +49,14 @@ export class YourModule {
   }
 }
 ```
+
+## 依赖的插件
+
+本插件运行依赖以下插件：
+
+- @univerjs/core
+- @univerjs/design
+- @univerjs/facade
+- @univerjs/sheets
+- @univerjs/sheets-ui
+- @univerjs/ui
