docs(faq): rename faq to troubleshooting and add notes

--- a/src/content/docs/en-us/guides/quick-start/index.mdx
+++ b/src/content/docs/en-us/guides/quick-start/index.mdx
@@ -4,7 +4,7 @@ sidebar:
   order: 1
 ---
 
-We recommend using build tools such as [Vite](https://vitejs.dev/), [esbuild](https://esbuild.github.io/), or [Webpack 5](https://webpack.js.org/) that have good support for ES Modules to build Univer applications. If you are using other build tools like Webpack 4, you may require some additional configurations. For more information, please refer to [Read More](/en-us/guides/quick-start#read-more) and the [FAQ](/en-us/guides/faq).
+We recommend using build tools such as [Vite](https://vitejs.dev/), [esbuild](https://esbuild.github.io/), or [Webpack 5](https://webpack.js.org/) that have good support for ES Modules to build Univer applications. If you are using other build tools like Webpack 4, you may require some additional configurations. For more information, please refer to [Read More](/en-us/guides/quick-start#read-more) and the [Troubleshooting](/en-us/guides/troubleshooting).
 
 ## Installation
 
