--- a/src/content/docs/enterprises/trial-version.mdx
+++ b/src/content/docs/enterprises/trial-version.mdx
@@ -46,7 +46,7 @@ import {TabItem, Tabs} from "@astrojs/starlight/components";
         4. 启动前端demo。
         ```bash
         docker run --net=unvier-prod --rm --name univer-collaboration-demo \
-        -p 3010:3010 univer-collaboration-demo:dev
+        -p 3010:3010 univer-acr-registry.cn-shenzhen.cr.aliyuncs.com/release/univer-collaboration-demo:latest
         ```
 
     </TabItem>
