--- a/src/content/docs/en-us/guides/troubleshooting.mdx
+++ b/src/content/docs/en-us/guides/troubleshooting.mdx
@@ -19,10 +19,12 @@ We have provided an [online demo](/playground?title=Webpack%204) based on webpac
 - Please make sure you have introduced the prerequisite dependencies used by the plugins in order.
 - You can find the prerequisite dependencies required for the plugin to run in the `peerDependencies` field of the plugin's documentation page or the `packages.json` of the plugin source code.
 
-### Why do I get an error saying that dependencies cannot be found when I install with npm or yarn?
+### Why do I get an error outputting that `Could not resolve dependencies` when I use npm or yarn to install?
 
-- yarn 1 and npm 6 will not automatically install `peerDependencies` from `packages.json`, see [package-json#peerdependencies](https://docs.npmjs.com/cli/v10/configuring-npm/package-json#peerdependencies).
-- It is recommended to upgrade the node version to 16 or above, or upgrade the npm version to 8 or above.
+This may be because the version of the node package manager you are using is too low. yarn@1 and npm@6 will not automatically install peerDependencies in packages.json. For more details, see  [package-json#peerdependencies](https://docs.npmjs.com/cli/v10/configuring-npm/package-json#peerdependencies).
+
+- You can manually install the missing peer dependencies.
+- For npm users, you can upgrade your node version to 16 or above, or upgrade your npm version to 8 or above. Be aware that the upgrade behavior may affect your existing projects.
 
 ## Usage Related
 
