chore: docker compose (#69)
* docs: modify docker-compose bash

* docs: modify docker-compose bash

--- a/src/content/docs/enterprises/trial-version.mdx
+++ b/src/content/docs/enterprises/trial-version.mdx
@@ -45,8 +45,8 @@ import {TabItem, Tabs} from "@astrojs/starlight/components";
         ```
         4. 启动前端demo。
         ```bash
-        docker run --net=unvier-prod --rm --name univer-collaboration-demo \
-        -p 3010:3010 univer-collaboration-demo:dev
+       docker run --net=unvier-prod --rm --name univer-collaboration-lite \
+               -p 3010:3010 univer-acr-registry.cn-shenzhen.cr.aliyuncs.com/release/univer-collaboration-lite:latest
         ```
 
     </TabItem>
