docs: remove error content in umd.mdx

--- a/src/content/docs/guides/quick-start/umd.mdx
+++ b/src/content/docs/guides/quick-start/umd.mdx
@@ -49,7 +49,7 @@ Univer 也可以通过 UMD 的方式引入，我们在 [Playground](https://univ
     <script src="https://unpkg.com/@univerjs/sheets-numfmt/lib/umd/index.js"></script>
   </head>
   <body>
-    <div id="app"></app>
+    <div id="app"></div>
 
     <script>
       // univer
