--- a/src/content/docs/en-us/guides/quick-start/umd.mdx
+++ b/src/content/docs/en-us/guides/quick-start/umd.mdx
@@ -49,7 +49,7 @@ You can also using Univer via UMD. We provide an online example in [Playground](
     <script src="https://unpkg.com/@univerjs/sheets-numfmt/lib/umd/index.js"></script>
   </head>
   <body>
-    <div id="app"></app>
+    <div id="app"></div>
 
     <script>
       // univer
