docs(plugins): add locales and assets

--- a/src/content/docs/guides/plugins/common/uniscript.mdx
+++ b/src/content/docs/guides/plugins/common/uniscript.mdx
@@ -49,3 +49,8 @@ export class YourModule {
   }
 }
 ```
+{/* package-locales start */}
+{/* package-locales end */}
+
+{/* package-assets start */}
+{/* package-assets end */}
