--- a/src/content/docs/guides/plugins/common/facade.mdx
+++ b/src/content/docs/guides/plugins/common/facade.mdx
@@ -5,3 +5,9 @@ title: "@univerjs/facade"
 在 Univer 当中，除了使用底层的 API 之外，你还可以使用 `@univerjs/facade` 提供的 Facade API，它是对底层 API 的封装，更加简单易用。
 
 你可以通过阅读[这篇文档](/guides/facade)了解如何使用 Facade API。
+
+{/* package-locales start */}
+{/* package-locales end */}
+
+{/* package-assets start */}
+{/* package-assets end */}
