docs: polishing formula doc

--- a/src/content/docs/guides/troubleshooting.mdx
+++ b/src/content/docs/guides/troubleshooting.mdx
@@ -29,11 +29,17 @@ import ClipboardImage from "@/assets/img/clipboard.png";
 
 ## 使用相关
 
-### 为什么在 Firefox 里无法使用右键中菜单的粘贴？
+### 复制粘贴 / 剪贴板
 
-Firefox 尚不支持 `clipboard.readText()`，详见 [MDN](https://developer.mozilla.org/en-US/docs/Web/API/Clipboard/readText)，在这种情况下，Univer 只能从原生的粘贴事件中获取剪贴板内容，因此只能支持快捷键粘贴。
+#### 为什么在 Firefox 里无法使用右键中菜单的粘贴？
 
-### 为什么我无法进行复制粘贴？
+Firefox 尚不支持 `clipboard.readText()`，详见 [MDN](https://developer.mozilla.org/en-US/docs/Web/API/Clipboard/readText)，在这种情况下，Univer 只能从粘贴事件中获取剪贴板内容，因此只能支持快捷键粘贴。
+
+#### 我使用 Chrome 浏览器，但是无法使用右键中菜单的粘贴？
+
+首先请确保你的浏览器版本在 66 以上，然后请确保你的网站是通过 HTTPS 协议访问的，由于 Chrome 的安全策略，只有在 HTTPS 协议下才能使用 `clipboard` API。
+
+#### 为什么我无法进行复制粘贴？
 
 在 Chrome 和 Safari 等支持 `clipboard.readText()` 的浏览器中，Univer 会直接尝试获取剪贴板内容，请确保操作的用户授予了 Univer 浏览器的剪贴板权限。
 
