--- a/src/content/docs/en-us/guides/architecture/rendering.mdx
+++ b/src/content/docs/en-us/guides/architecture/rendering.mdx
@@ -139,7 +139,7 @@ It is essential that all objects requiring rendering extend from the `BaseObject
 
 <Image alt='rendererBaseObject' src={rendererBaseObject}/>
 
-### `Shape`
+### Shape
 
 `Shape` implements basic shapes, such as `Circle`, `Rect`, `Path`, and `Polygon`, with static functions to make them easily usable by other objects.
 
