docs(plugins): add deps info (#63)

--- a/src/content/docs/guides/plugins/common/facade.mdx
+++ b/src/content/docs/guides/plugins/common/facade.mdx
@@ -6,8 +6,22 @@ title: "@univerjs/facade"
 
 你可以通过阅读[这篇文档](/guides/facade)了解如何使用 Facade API。
 
+
+## 依赖的插件
+
+本插件运行依赖以下插件：
+
+- @univerjs/core
+- @univerjs/engine-formula
+- @univerjs/network
+- @univerjs/sheets
+- @univerjs/sheets-formula
+- @univerjs/sheets-numfmt
+
+
 {/* package-locales start */}
 {/* package-locales end */}
 
 {/* package-assets start */}
 {/* package-assets end */}
+
