docs: modify format

--- a/src/content/docs/en-us/enterprises/trial-version.mdx
+++ b/src/content/docs/en-us/enterprises/trial-version.mdx
@@ -8,7 +8,7 @@ import {TabItem, Tabs} from "@astrojs/starlight/components";
 The current deployment versions include:
 
 - Lite (Community Simplified Version):Requires only the execution of a binary file for deployment, with no dependencies required.
-- Docker-compose (Community Comprehensive Version):Requires[docker >= 23 version](https://docs.docker.com/engine/install/)。
+- Docker-compose (Community Comprehensive Version) : Requires [docker >= 23 version](https://docs.docker.com/engine/install/).
 
 ## Technical Metrics	
 | Metrics   | Description               |
@@ -129,11 +129,11 @@ Port Usage
 ### 5. What is the difference between lite (community simplified version) and docker-compose (community full version)?
 - Functionality: The functionality remains the same.
 - Supported systems:
-- lite：Supports windows, linux, mac.
-- docker-compose: Supports linux, mac.
+    - lite：Supports windows, linux, mac.
+    - docker-compose: Supports linux, mac.
 - Specific implementation:
-- lite：SQLite + Memory queue.
-- docker-compose: PostgreSQL + RabbitMQ。
+    - lite：SQLite + Memory queue.
+    - docker-compose: PostgreSQL + RabbitMQ。
 
 ### 6. How to properly stop the service for lite version
 <Tabs>
