--- a/src/content/docs/guides/plugins/common/facade.mdx
+++ b/src/content/docs/guides/plugins/common/facade.mdx
@@ -2,6 +2,8 @@
 title: "@univerjs/facade"
 ---
 
+[![npm version](https://img.shields.io/npm/v/@univerjs/facade)](https://npmjs.org/package/@univerjs/facade)
+
 在 Univer 当中，除了使用底层的 API 之外，你还可以使用 `@univerjs/facade` 提供的 Facade API，它是对底层 API 的封装，更加简单易用。
 
 你可以通过阅读[这篇文档](/guides/facade)了解如何使用 Facade API。
