--- a/src/content/docs/guides/quick-start/index.mdx
+++ b/src/content/docs/guides/quick-start/index.mdx
@@ -19,13 +19,13 @@ import { Tabs, TabItem } from "@astrojs/starlight/components";
     推荐使用 npm >= 8.0.0，以便自动安装 peerDependencies。
 
     ```shell
-    npm install @univerjs/core @univerjs/design @univerjs/docs @univerjs/engine-formula @univerjs/engine-render @univerjs/sheets @univerjs/sheets-formula @univerjs/sheets-ui @univerjs/ui
+    npm install @univerjs/core @univerjs/design @univerjs/docs @univerjs/docs-ui @univerjs/engine-formula @univerjs/engine-render @univerjs/sheets @univerjs/sheets-formula @univerjs/sheets-ui @univerjs/ui
     ```
   </TabItem>
 
   <TabItem label="pnpm">
     ```shell
-    pnpm add install @univerjs/core @univerjs/design @univerjs/docs @univerjs/engine-formula @univerjs/engine-render @univerjs/sheets @univerjs/sheets-formula @univerjs/sheets-ui @univerjs/ui
+    pnpm add install @univerjs/core @univerjs/design @univerjs/docs @univerjs/docs-ui @univerjs/engine-formula @univerjs/engine-render @univerjs/sheets @univerjs/sheets-formula @univerjs/sheets-ui @univerjs/ui
     ```
   </TabItem>
 </Tabs>
@@ -37,12 +37,14 @@ import { Tabs, TabItem } from "@astrojs/starlight/components";
 ```ts title="main.ts"
 import "@univerjs/design/lib/index.css";
 import "@univerjs/ui/lib/index.css";
+import "@univerjs/docs-ui/lib/index.css";
 import "@univerjs/sheets-ui/lib/index.css";
 import "@univerjs/sheets-formula/lib/index.css";
 
 import { Univer } from "@univerjs/core";
 import { defaultTheme } from "@univerjs/design";
 import { UniverDocsPlugin } from "@univerjs/docs";
+import { UniverDocsUIPlugin } from "@univerjs/docs-ui";
 import { UniverFormulaEnginePlugin } from "@univerjs/engine-formula";
 import { UniverRenderEnginePlugin } from "@univerjs/engine-render";
 import { UniverSheetsPlugin } from "@univerjs/sheets";
@@ -72,6 +74,7 @@ univer.registerPlugin(UniverUIPlugin, {
 univer.registerPlugin(UniverDocsPlugin, {
   hasScroll: false,
 });
+univer.registerPlugin(UniverDocsUIPlugin);
 
 // sheet plugins
 univer.registerPlugin(UniverSheetsPlugin);
