feat(docs): update ja-jp docs

--- a/src/content/docs/en-us/guides/introduction.mdx
+++ b/src/content/docs/en-us/guides/introduction.mdx
@@ -57,4 +57,4 @@ Univer also offers a commercial version that provides the following out-of-the-b
 - 🛜 Data connectors
 - 🎚️ Live Share for collaborative browsing
 
-To learn more about our commercial edition or request a trial, please visit [here](/enterprises).
+To learn more about our commercial edition or request a trial, please visit [here](/en-us/enterprises).
