--- a/src/content/docs/ja-jp/guides/quick-start/index.mdx
+++ b/src/content/docs/ja-jp/guides/quick-start/index.mdx
@@ -25,7 +25,7 @@ import { Tabs, TabItem } from "@astrojs/starlight/components";
 
   <TabItem label="pnpm">
     ```shell
-    pnpm add install @univerjs/core @univerjs/design @univerjs/docs @univerjs/docs-ui @univerjs/engine-formula @univerjs/engine-render @univerjs/sheets @univerjs/sheets-formula @univerjs/sheets-ui @univerjs/ui
+    pnpm add @univerjs/core @univerjs/design @univerjs/docs @univerjs/docs-ui @univerjs/engine-formula @univerjs/engine-render @univerjs/sheets @univerjs/sheets-formula @univerjs/sheets-ui @univerjs/ui
     ```
   </TabItem>
 </Tabs>
