--- a/src/content/docs/guides/quick-start/umd.mdx
+++ b/src/content/docs/guides/quick-start/umd.mdx
@@ -44,6 +44,7 @@ You can also using Univer via UMD. We provide an online example in [Playground](
     <script src="https://unpkg.com/@univerjs/ui/lib/umd/index.js"></script>
     <script src="https://unpkg.com/@univerjs/sheets/lib/umd/index.js"></script>
     <script src="https://unpkg.com/@univerjs/docs/lib/umd/index.js"></script>
+    <script src="https://unpkg.com/@univerjs/docs-ui/lib/umd/index.js"></script>
     <script src="https://unpkg.com/@univerjs/sheets-ui/lib/umd/index.js"></script>
     <script src="https://unpkg.com/@univerjs/sheets-formula/lib/umd/index.js"></script>
     <script src="https://unpkg.com/@univerjs/sheets-numfmt/lib/umd/index.js"></script>
@@ -63,6 +64,7 @@ You can also using Univer via UMD. We provide an online example in [Playground](
       univer.registerPlugin(window.UniverDocs.UniverDocsPlugin, {
         hasScroll: false,
       });
+      univer.registerPlugin(window.UniverDocsUi.UniverDocsUIPlugin);
       univer.registerPlugin(window.UniverEngineRender.UniverRenderEnginePlugin);
       univer.registerPlugin(window.UniverUi.UniverUIPlugin, {
         container: "app",
