feat: set default language to English

--- a/src/content/blog/ot/en-us.mdx
+++ b/src/content/blog/ot/en-us.mdx
@@ -9,7 +9,7 @@ cover: ./4.png
 author: Wenzhao Hu
 date: 2024-01-12
 lang: en-us
-slug: en-us/blog/ot
+slug: blog/ot
 ---
 
 > This blog post is a compilation of internal discussions and insights from the [Univer team](https://github.com/dream-num). At Univer, we regularly share and discuss fascinating technical challenges. If you find this blog post engaging, we encourage you to consider [joining us](mailto:huwenzhao@univer.ai).
