--- a/src/content/blog/ot/zh-cn.mdx
+++ b/src/content/blog/ot/zh-cn.mdx
@@ -9,7 +9,7 @@ cover: ./4.png
 author: Wenzhao Hu
 date: 2024-01-12
 lang: zh-cn
-slug: blog/ot
+slug: zh-cn/blog/ot
 ---
 
 > 这篇博客是 [Univer 团队](https://github.com/dream-num)内部分享整理而成。在 Univer 我们经常对有趣的技术问题进行分享和讨论，如果你喜欢这篇博客，不妨考虑[加入我们](mailto:huwenzhao@univer.ai)。
