feat: add sync-docs scripts

--- a/src/content/docs/guides/plugins/common/facade.mdx
+++ b/src/content/docs/guides/plugins/common/facade.mdx
@@ -2,14 +2,23 @@
 title: "@univerjs/facade"
 ---
 
-[![npm version](https://img.shields.io/npm/v/@univerjs/facade)](https://npmjs.org/package/@univerjs/facade)
+[![npm version](https://img.shields.io/npm/v/@univerjs/facade)](https://npmjs.org/packages/@univerjs/facade)
+[![license](https://img.shields.io/npm/l/@univerjs/facade)](https://img.shields.io/npm/l/@univerjs/facade)
+
+## Introduction
 
 In Univer, in addition to using the low-level APIs, you can also use the Facade API provided by `@univerjs/facade`, which is a higher-level abstraction of the low-level APIs, making it easier to use.
 
-You can learn how to use the Facade API by reading [this document](/en-us/guides/facade).
+You can learn how to use the Facade API by reading [this document](https://univer.ai/en-us/guides/facade/).
 
-{/* package-locales start */}
-{/* package-locales end */}
+## Usage
 
-{/* package-assets start */}
-{/* package-assets end */}
+### Installation
+
+```shell
+# Using npm
+npm install @univerjs/facade
+
+# Using pnpm
+pnpm add @univerjs/facade
+```
