--- a/src/content/docs/zh-cn/guides/plugins/common/facade.mdx
+++ b/src/content/docs/zh-cn/guides/plugins/common/facade.mdx
@@ -2,28 +2,23 @@
 title: "@univerjs/facade"
 ---
 
-[![npm version](https://img.shields.io/npm/v/@univerjs/facade)](https://npmjs.org/package/@univerjs/facade)
+[![npm version](https://img.shields.io/npm/v/@univerjs/facade)](https://npmjs.org/packages/@univerjs/facade)
+[![license](https://img.shields.io/npm/l/@univerjs/facade)](https://img.shields.io/npm/l/@univerjs/facade)
+
+## 简介
 
 在 Univer 当中，除了使用底层的 API 之外，你还可以使用 `@univerjs/facade` 提供的 Facade API，它是对底层 API 的封装，更加简单易用。
 
-你可以通过阅读[这篇文档](/guides/facade)了解如何使用 Facade API。
+你可以通过阅读[这篇文档](https://univer.ai/en-us/guides/facade/)了解如何使用 Facade API。
 
+## 使用指南
 
-## 依赖的插件
+### 安装
 
-本插件运行依赖以下插件：
+```shell
+# 使用 npm
+npm install @univerjs/facade
 
-- @univerjs/core
-- @univerjs/engine-formula
-- @univerjs/network
-- @univerjs/sheets
-- @univerjs/sheets-formula
-- @univerjs/sheets-numfmt
-
-
-{/* package-locales start */}
-{/* package-locales end */}
-
-{/* package-assets start */}
-{/* package-assets end */}
-
+# 使用 pnpm
+pnpm add @univerjs/facade
+```
