--- a/src/content/docs/guides/advanced-use/index.mdx
+++ b/src/content/docs/guides/advanced-use/index.mdx
@@ -1,5 +1,7 @@
 ---
 title: Extend Univer
+sidebar:
+  order: 1
 ---
 
 Univer's built-in functionalities may not meet your specific needs, but you can extend Univer to implement your business logic. You can extend Univer in the following areas:
