--- a/src/content/docs/guides/customizing/index.mdx
+++ b/src/content/docs/guides/customizing/index.mdx
@@ -4,7 +4,7 @@ sidebar:
   order: 1
 ---
 
-We recommend using build tools such as [Vite](https://vitejs.dev/), [esbuild](https://esbuild.github.io/), or [Webpack 5](https://webpack.js.org/) that have good support for ES Modules to build Univer applications. If you are using other build tools like Webpack 4, you may require some additional configurations. For more information, please refer to [Read More](/guides/quick-start#read-more) and the [Troubleshooting](/guides/troubleshooting).
+We recommend using build tools such as [Vite](https://vitejs.dev/), [esbuild](https://esbuild.github.io/), or [Webpack 5](https://webpack.js.org/) that have good support for ES Modules to build Univer applications. If you are using other build tools like Webpack 4, you may require some additional configurations. For more information, please refer to [Read More](/guides/quickstart#read-more) and the [Troubleshooting](/guides/troubleshooting).
 
 ## Installation
 
@@ -94,7 +94,7 @@ Finally, create an empty Workbook using the `createUniverSheet` method:
 univer.createUniverSheet({});
 ```
 
-For instructions on how to load a spreadsheet into a newly created Univer instance, please consult the [next section](/guides/quick-start/data) of our documentation.
+For instructions on how to load a spreadsheet into a newly created Univer instance, please consult the [next section](/guides/quickstart/data) of our documentation.
 
 ## Read More
 
@@ -103,4 +103,4 @@ We have provided some examples to assist you in incorporating Univer using vario
 - [Vite](/playground/?title=Vite)
 - [Webpack 4](/playground/?title=Webpack%204)
 
-Alternatively, you can also include Univer using the `<script>` tag. Please refer to the [Using UMD](/guides/quick-start/umd/) guide for further instructions.
+Alternatively, you can also include Univer using the `<script>` tag. Please refer to the [Using UMD](/guides/quickstart/umd/) guide for further instructions.
