--- a/src/content/docs/guides/getting-started/umd.mdx
+++ b/src/content/docs/guides/getting-started/umd.mdx
@@ -1,5 +1,7 @@
 ---
 title: Using UMD
+sidebar:
+  order: 2
 ---
 
 You can also using Univer via UMD. We provide an online example in [Playground](https://univer.ai/playground/?title=UMD).
