--- a/src/content/docs/guides/introduction/index.mdx
+++ b/src/content/docs/guides/introduction/index.mdx
@@ -116,7 +116,7 @@ import FeatureBox from './_components/FeatureBox.astro'
 
 ## What's Next
 
-If you can't wait to experience Univer, please refer to the [Quick Start](/guides/quick-start).
+If you can't wait to experience Univer, please refer to the [Quick Start](/guides/quickstart).
 
 Or join our developer community and discuss with us:
 
