--- a/src/content/docs/guides/introduction/roadmap.mdx
+++ b/src/content/docs/guides/introduction/roadmap.mdx
@@ -6,122 +6,105 @@ sidebar:
 
 import Roadmap from './_components/Roadmap'
 
-## Open-source Development Roadmap
-
 You can submit your requirements through Feature Requests, please refer to the [Contribution Guide](/guides/contributing). We will adjust the development roadmap based on community feedback.
+
+## Univer Sheet
 
 export const sheetData = [
   {
     start: '2023/09',
     end: '2023/12',
-    type: 'Univer Sheet',
-    text: 'Main Features',
+    name: 'Main Features',
   },
   {
     start: '2024/02',
     end: '2024/03',
-    type: 'Univer Sheet',
-    text: 'Find & Replace',
+    name: 'Find & Replace',
   },
   {
     start: '2024/01',
     end: '2024/03',
-    type: 'Univer Sheet',
-    text: 'Conditional Formatting',
+    name: 'Conditional Formatting',
   },
   {
     start: '2024/01',
     end: '2024/03',
-    type: 'Univer Sheet',
-    text: 'Data Validation',
+    name: 'Data Validation',
   },
   {
     start: '2024/03',
     end: '2024/03',
-    type: 'Univer Sheet',
-    text: 'Floating Images',
+    name: 'Floating Images',
   },
   {
     start: '2024/04',
     end: '2024/06',
-    type: 'Univer Sheet',
-    text: 'Sheet Protection',
+    name: 'Sheet Protection',
   },
   {
     start: '2024/04',
     end: '2024/06',
-    type: 'Univer Sheet',
-    text: 'Filtering',
+    name: 'Filtering',
   },
   {
     start: '2024/04',
     end: '2024/06',
-    type: 'Univer Sheet',
-    text: 'Comments',
+    name: 'Comments',
   },
   {
     start: '2024/01',
     end: '2024/06',
-    type: 'Univer Sheet',
-    text: 'More Formulas',
+    name: 'More Formulas',
   },
   {
     start: '2024/04',
     end: '2024/06',
-    type: 'Univer Sheet',
-    text: 'Sorting',
+    name: 'Sorting',
   },
+  {
+    start: '2024/01',
+    end: '2024/02',
+    name: 'Printing (Pro)'
+  },
+  {
+    start: '2024/01',
+    end: '2024/03',
+    name: 'Import / Export (Pro)'
+  }
 ]
 
-<Roadmap client:load values={sheetData} />
+<Roadmap client:load data={sheetData} />
 
+## Univer Doc
 
 export const docData = [
   {
     start: '2024/01',
-    end: '2024/06',
-    type: 'Univer Doc',
-    text: 'Main Features',
+    end: '2024/04',
+    name: 'Main Features',
   },
   {
-    start: '2024/09',
-    end: '2025/03',
-    type: 'Univer Slide',
-    text: 'Main Features',
-  },
+    start: '2024/05',
+    end: '2024/12',
+    name: 'Other Features',
+  }
 ]
 
-{/* <Roadmap client:load values={docData} /> */}
+<Roadmap client:load data={docData} />
 
+## Univer Slide
 
 export const slideData = [
   {
     start: '2024/09',
     end: '2025/03',
-    type: 'Univer Slide',
-    text: 'Main Features',
+    name: 'Main Features',
+  },
+  {
+    start: '2025/03',
+    end: '2025/12',
+    name: 'Other Features',
   }
 ]
 
-{/* <Roadmap client:load values={slideData} /> */}
-
-### 2024 Q1
-
-- Find and Replace
-- Conditional Formatting
-- Data Validation
-- Sheet Protection (Sub-sheet and Range Permissions)
-- Filtering
-- Sorting
-- Floating Images
-- Comments
-- More Formulas
-
-## Commercial Version Development Roadmap
-
-We will also synchronize the development roadmap and progress of the commercial licensed version (Enterprise Edition) with the community. If you are interested in the capabilities provided by the commercial license, you can [contact us](/guides/introduction/#enterprise-edition).
-
-### 2024 Q1
-
-- Import / Export
-- Printing
+<Roadmap client:load data={slideData} />
