--- a/src/content/docs/zh-cn/guides/getting-started/umd.mdx
+++ b/src/content/docs/zh-cn/guides/getting-started/umd.mdx
@@ -1,5 +1,7 @@
 ---
 title: 使用 UMD
+sidebar:
+  order: 2
 ---
 
 Univer 也可以通过 UMD 的方式引入，我们在 [Playground](https://univer.ai/playground/?title=UMD) 提供了一个在线的示例。
