--- a/src/content/docs/guides/getting-started/umd.mdx
+++ b/src/content/docs/guides/getting-started/umd.mdx
@@ -4,6 +4,10 @@ sidebar:
   order: 2
 ---
 
+import UMDGenerator from './_components/UMDGenerator'
+
+<UMDGenerator client:only />
+
 You can also using Univer via UMD. We provide an online example in [Playground](https://univer.ai/playground/?title=UMD).
 
 ## Using CDN to import UMD
