--- a/src/content/docs/guides/introduction/index.mdx
+++ b/src/content/docs/guides/introduction/index.mdx
@@ -65,6 +65,49 @@ import FeatureBox from './_components/FeatureBox.astro'
 
 > Univer Sheet has completed most of the development of basic features, but there are still key features that have not been fully implemented. Please follow our [Roadmap](/guides/introduction/roadmap) to stay updated on our progress.
 
+#### Showcases
+
+import Sandbox from '@/components/Sandbox'
+
+export const code = `function UniverSheet () {
+  const univerRef = useRef(null);
+
+  useEffect(() => {
+    const univer = new Univer({
+      theme: defaultTheme,
+    });
+
+    // core plugins
+    univer.registerPlugin(UniverRenderEnginePlugin);
+    univer.registerPlugin(UniverFormulaEnginePlugin);
+    univer.registerPlugin(UniverUIPlugin, {
+      container: univerRef.current,
+      header: true,
+      toolbar: true,
+      footer: true,
+    });
+
+    // doc plugins
+    univer.registerPlugin(UniverDocsPlugin, {
+      hasScroll: false,
+    });
+    univer.registerPlugin(UniverDocsUIPlugin);
+
+    // sheet plugins
+    univer.registerPlugin(UniverSheetsPlugin);
+    univer.registerPlugin(UniverSheetsUIPlugin);
+    univer.registerPlugin(UniverSheetsFormulaPlugin);
+
+    univer.createUniverSheet({});
+  }, []);
+
+  return (
+    <div ref={univerRef} style={{ height: '400px' }} />
+  )
+}`
+
+<Sandbox client:only="react" src="/sandbox" code={code} hideEditor />
+
 #### Editing Operations
 
 - Create, delete, and move sheets
